--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
   <link rel="stylesheet" href="/assets/css/home.css">
   <script src="/assets/js/home.js"></script>
   
-  <title>Homepage</title>
+  <title>Eco Vibes - Homepage</title>
 </head>
 
 
