--- a/public/pages/contact.html
+++ b/public/pages/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Eco Vibes - Association</title>
+  <title>Eco Vibes - Contact</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="../assets/owlcarousel/assets/owl.carousel.min.css">
