--- a/public/pages/event.html
+++ b/public/pages/event.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Eco Vibes - Service</title>
+    <title>Eco Vibes - Event </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../assets/owlcarousel/assets/owl.carousel.min.css">
@@ -101,7 +101,7 @@
             </div>
             
             <div class="contact-event">
-                <p class="service-paragraph"><strong>Service related to this Project</strong></p>
+                <p class="service-paragraph"><strong>Service related to this Event</strong></p>
                 <div class="row" id="service-related">
                 </div>
             </div>
