--- a/public/pages/team.html
+++ b/public/pages/team.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Eco Vibes - Association</title>
+    <title>Eco Vibes - Team</title>
+    
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../assets/owlcarousel/assets/owl.carousel.min.css">
