--- a/other/backend/main.html
+++ b/other/backend/main.html
@@ -169,7 +169,7 @@ state change triggering actions (e.g., POST to login etc..)</strong></li>
 </ul>
 
 
-<p>For this project we didn't use nor manage the session state since as a choice, we thought of our website to be informative and to push the people to contact us directly via email or phone to have more information about it.</p>
+<p>For this project we didn't use nor manage the session state since the login and  save the information about the users in not needed.</p>
 
 <ul>
 <li><strong>Which technology did you use (relational or a no-SQL database) for managing
