--- a/public/pages/association.html
+++ b/public/pages/association.html
@@ -77,11 +77,12 @@
   </div>  
 </nav>
  <!------------------------------------------------------- HEADER -------------------------------------------------------------------->
-<header>
-    <div class="header">
-      <p id="p1">Association</p>    
-    </div>
-</header>
+ <div class="header_association">
+  <div class="first_text">
+    <strong class="slogan">Association</strong>
+  </div>
+</div>
+
 
 
  <!------------------------------------------------------- BODY -------------------------------------------------------------------->
