--- a/public/pages/donate.html
+++ b/public/pages/donate.html
@@ -78,23 +78,22 @@
 </nav>
 
  <!-------------------------------------------------------HEADER-------------------------------------------------------------------->
-<header>
-    <div class="header_donate">
-      <p id="p1">Donate now</p>
-    </div>
-</header>
+ <div class="header_donate">
+  <div class="first_text">
+    <strong class="slogan"> Donate Now</strong>
+  </div>
+</div>
 
 
  <!-------------------------------------------------------BODY-------------------------------------------------------------------->
 
-<div class="col-lg-12">
+<div class="container">
     <div class="row">
-        <div class="col-lg-2"></div>
-        <div class="col-lg-5" id="margin-donate">
+        <div class="col-lg-7" id="margin-donate">
             <p id="p1">MAKE A DONATION</p><br>
             <p id="p2">Help us to make our region a better place.</p><br>
         </div>
-        <div class="col-lg-3" id="margin-donate">
+        <div class="col-lg-5" id="margin-donate">
             <div class="card">
                 <form>
                     <div class="card-header">
@@ -135,7 +134,6 @@
                 </form> 
             </div>
         </div>
-        <div class="col-lg-2"></div>
     </div>
 </div>
 
