--- a/public/pages/project.html
+++ b/public/pages/project.html
@@ -79,7 +79,7 @@
               </ul>
         </div>  
     </nav>
-<!------------------------------------------------------- IMAGE INTRO -------------------------------------------------------------------->
+<!------------------------------------------------------- Header -------------------------------------------------------------------->
 
     <div class="projectintro">
         <div class="first_text">
