--- a/public/pages/team.html
+++ b/public/pages/team.html
@@ -81,12 +81,12 @@
         </div>  
     </nav>
 <!------------------------------------------------------- IMAGE INTRO -------------------------------------------------------------------->
+<div class="header_team">
+  <div class="first_text">
+    <strong class="slogan"> The Team</strong>
+  </div>
+</div>
 
-<header>
-    <div class="header_team">
-      <p id="p1">The Team</p>  
-    </div>
-</header>
 <!-----------------------------------------------------------TEAM -------------------------------------------------------------------->
 
 <div class = "container-team">
