--- a/public/pages/contact.html
+++ b/public/pages/contact.html
@@ -19,6 +19,7 @@
 <body>
 
    
+
   <!-------------------------------------------------------NAVBAR-------------------------------------------------------------------->
 
 <nav class="navbar sticky-top navbar-expand-sm bg-dark navbar-dark">
@@ -76,18 +77,18 @@
     </ul>
   </div>  
 </nav>
+  <!-------------------------------------------------------HEADER-------------------------------------------------------------------->
 
-<header>
-        <div class="header_contact">
-            <p id="p1">Get in touch</p>
-            <p id="p2">Want to find out more about our service or work with us? Let's talk.</p>   
-        </div>    
-</header>
-
-<div class="col-lg-12">
-    <div class="row">
-        <div class="col-lg-2"></div>
-        <div class="col-lg-4">
+  <div class="header_contact">
+    <div class="first_text">
+      <strong class="slogan"> Get in Touch</strong><br>
+      <p class="baseline"> Want to find out more about our service or work with us? Let's talk.</p>
+    </div>
+  </div>
+<!-------------------------------------------------------BODY-------------------------------------------------------------------->
+<div class="container">
+    <div class="row justify-content-md-center">
+        <div class="col-lg-8">
             <form id="margin-team">            
                 <div class="form-row">
                     <div class="col-md-6 mb-4">
@@ -158,7 +159,6 @@
                 <a href="mailto:info@ecocontrol.ch">info@ecovibes.org</a>
             </p>
         </div>
-        <div class="col-lg-2"></div>
     </div>
 </div>
 
