--- a/public/index.html
+++ b/public/index.html
@@ -233,7 +233,7 @@
         <div class="row align-items-center">
           <div class="col-md-9">
             <p class="textaboutus1" >Who we are</p>
-            <p class="textaboutus2">Our association was born from a group of young people who cared about the well-being and health of their city. Thanks to their commitment and their desire to get involved, they have managed to join a large number of volunteers of all ages with the aim of safeguarding cities from degradation.</p>
+            <p class="textaboutus2">Eco Vibes was founded by Father Barbieri on 15 April 1965. This is when it all started - a journey spanning more than fifty years during which Eco Vibes and Italian international cooperation have expanded and evolved in very different aspects.</p>
             <a href="./pages/team.html" type="button" class="btn btn-light">Team</a>
           </div>
           <div class="col-6 col-md-3">
